Fixed Display Zoomed mode

--- a/MoppApp/MoppApp/TokenFlow.storyboard
+++ b/MoppApp/MoppApp/TokenFlow.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -33,7 +33,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jHz-uj-av0">
-                                <rect key="frame" x="16" y="196" width="343" height="274"/>
+                                <rect key="frame" x="16" y="96" width="343" height="475"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="usD-sU-zJc">
                                         <rect key="frame" x="0.0" y="18" width="343" height="57"/>
@@ -110,10 +110,10 @@
                                         </constraints>
                                     </view>
                                     <containerView autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="pUF-he-w2e">
-                                        <rect key="frame" x="0.0" y="75" width="343" height="199"/>
+                                        <rect key="frame" x="0.0" y="75" width="343" height="475"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="199" id="r73-vf-B3d"/>
+                                            <constraint firstAttribute="height" constant="475" id="r73-vf-B3d"/>
                                         </constraints>
                                     </containerView>
                                 </subviews>
@@ -121,7 +121,7 @@
                                 <constraints>
                                     <constraint firstItem="pUF-he-w2e" firstAttribute="top" secondItem="usD-sU-zJc" secondAttribute="bottom" id="DQT-1O-Pv0"/>
                                     <constraint firstAttribute="trailing" secondItem="usD-sU-zJc" secondAttribute="trailing" id="Dbv-uV-gB6"/>
-                                    <constraint firstAttribute="height" constant="274" id="GUC-BK-ePx"/>
+                                    <constraint firstAttribute="height" constant="475" id="GUC-BK-ePx"/>
                                     <constraint firstItem="usD-sU-zJc" firstAttribute="leading" secondItem="jHz-uj-av0" secondAttribute="leading" id="LDB-1C-Hc0"/>
                                     <constraint firstItem="pUF-he-w2e" firstAttribute="width" secondItem="jHz-uj-av0" secondAttribute="width" id="WGV-sG-0fF"/>
                                     <constraint firstAttribute="trailing" secondItem="pUF-he-w2e" secondAttribute="trailing" id="fAY-yp-PQ8"/>
@@ -138,15 +138,15 @@
                         <viewLayoutGuide key="safeArea" id="AWR-IZ-uHO"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="AWR-IZ-uHO" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="jHz-uj-av0" secondAttribute="bottom" constant="75" id="2mH-oG-Frb"/>
-                            <constraint firstItem="MTn-Np-IcR" firstAttribute="bottom" secondItem="jHz-uj-av0" secondAttribute="bottom" priority="250" constant="-450" id="5fb-m1-mhq"/>
+                            <constraint firstItem="AWR-IZ-uHO" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="jHz-uj-av0" secondAttribute="bottom" constant="-77" id="2mH-oG-Frb"/>
+                            <constraint firstItem="MTn-Np-IcR" firstAttribute="bottom" secondItem="jHz-uj-av0" secondAttribute="bottom" priority="250" constant="-551" id="5fb-m1-mhq"/>
                             <constraint firstItem="jHz-uj-av0" firstAttribute="centerX" secondItem="DQv-G9-Xiy" secondAttribute="centerX" id="EaQ-2z-gUj"/>
-                            <constraint firstItem="jHz-uj-av0" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AWR-IZ-uHO" secondAttribute="top" constant="75" id="KjP-F1-GIT"/>
+                            <constraint firstItem="jHz-uj-av0" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AWR-IZ-uHO" secondAttribute="top" constant="39" id="KjP-F1-GIT"/>
                             <constraint firstAttribute="trailing" secondItem="jHz-uj-av0" secondAttribute="trailing" constant="16" id="QAs-rn-xAH"/>
-                            <constraint firstItem="jHz-uj-av0" firstAttribute="centerY" secondItem="DQv-G9-Xiy" secondAttribute="centerY" priority="750" constant="-0.5" id="XFX-vL-g8G"/>
-                            <constraint firstItem="jHz-uj-av0" firstAttribute="centerY" secondItem="DQv-G9-Xiy" secondAttribute="centerY" priority="700" constant="-0.5" id="baj-V7-Ubo"/>
-                            <constraint firstItem="jHz-uj-av0" firstAttribute="height" secondItem="DQv-G9-Xiy" secondAttribute="height" multiplier="0.683658" constant="-181.99989318847656" id="che-U1-Qyo"/>
-                            <constraint firstItem="jHz-uj-av0" firstAttribute="centerY" secondItem="DQv-G9-Xiy" secondAttribute="centerY" constant="-0.5" id="gEE-cm-chQ"/>
+                            <constraint firstItem="jHz-uj-av0" firstAttribute="centerY" secondItem="DQv-G9-Xiy" secondAttribute="centerY" priority="750" id="XFX-vL-g8G"/>
+                            <constraint firstItem="jHz-uj-av0" firstAttribute="centerY" secondItem="DQv-G9-Xiy" secondAttribute="centerY" priority="700" id="baj-V7-Ubo"/>
+                            <constraint firstItem="jHz-uj-av0" firstAttribute="height" secondItem="DQv-G9-Xiy" secondAttribute="height" multiplier="0.683658" constant="19.000113999999996" id="che-U1-Qyo"/>
+                            <constraint firstItem="jHz-uj-av0" firstAttribute="centerY" secondItem="DQv-G9-Xiy" secondAttribute="centerY" id="gEE-cm-chQ"/>
                             <constraint firstItem="jHz-uj-av0" firstAttribute="leading" secondItem="DQv-G9-Xiy" secondAttribute="leading" constant="16" id="kUB-iE-Oqb"/>
                         </constraints>
                     </view>
