--- a/MoppApp/MoppApp/Settings.storyboard
+++ b/MoppApp/MoppApp/Settings.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Sh7-45-xtX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Sh7-45-xtX">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -127,7 +127,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SsO-W3-Uvi" customClass="SettingsChoiceView" customModule="MoppApp" customModuleProvider="target">
-                                                    <rect key="frame" x="16" y="33" width="343" height="44"/>
+                                                    <rect key="frame" x="16" y="32.5" width="343" height="44"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="S6z-Zi-ic2">
                                                             <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
@@ -344,39 +344,42 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="SettingsStateCell" rowHeight="200" id="Jvo-qw-kMQ" customClass="SettingsStateCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="623.5" width="375" height="200"/>
+                                        <rect key="frame" x="0.0" y="708" width="375" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jvo-qw-kMQ" id="V2q-bf-zDW">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ask role and address on every signing" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iu4-8i-4zf">
-                                                    <rect key="frame" x="16" y="11" width="223.5" height="45"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="gma-5p-cba">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="200"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ask role and address on every signing" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iu4-8i-4zf" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="91.5" width="255" height="17.5"/>
+                                                            <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="15"/>
+                                                            <color key="textColor" name="MoppLabel"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="nSd-0O-0nE">
+                                                            <rect key="frame" x="294" y="84.5" width="51" height="31"/>
+                                                            <connections>
+                                                                <action selector="stateToggled:" destination="Jvo-qw-kMQ" eventType="valueChanged" id="VeS-PD-EfD"/>
+                                                            </connections>
+                                                        </switch>
+                                                    </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="45" id="yRP-To-rSk"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="GHz-oC-MEM"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="15"/>
-                                                    <color key="textColor" name="MoppLabel"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="nSd-0O-0nE">
-                                                    <rect key="frame" x="310" y="18" width="51" height="31"/>
-                                                    <connections>
-                                                        <action selector="stateToggled:" destination="Jvo-qw-kMQ" eventType="valueChanged" id="VeS-PD-EfD"/>
-                                                    </connections>
-                                                </switch>
+                                                </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="nSd-0O-0nE" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Iu4-8i-4zf" secondAttribute="trailing" constant="35" id="FHv-fZ-3Oq"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="nSd-0O-0nE" secondAttribute="bottom" constant="140" id="GM8-k0-EDB"/>
-                                                <constraint firstItem="Iu4-8i-4zf" firstAttribute="leading" secondItem="V2q-bf-zDW" secondAttribute="leadingMargin" id="K6D-9D-RjL"/>
-                                                <constraint firstItem="Iu4-8i-4zf" firstAttribute="top" secondItem="V2q-bf-zDW" secondAttribute="topMargin" id="Lhn-pf-uzO"/>
-                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Iu4-8i-4zf" secondAttribute="bottom" constant="133" id="Lz8-md-UAC"/>
-                                                <constraint firstItem="nSd-0O-0nE" firstAttribute="top" secondItem="V2q-bf-zDW" secondAttribute="topMargin" constant="7" id="MeV-wl-Pgz"/>
-                                                <constraint firstItem="nSd-0O-0nE" firstAttribute="trailing" secondItem="V2q-bf-zDW" secondAttribute="trailingMargin" id="Si2-1a-e92"/>
+                                                <constraint firstItem="gma-5p-cba" firstAttribute="top" secondItem="V2q-bf-zDW" secondAttribute="top" id="2NU-mp-Sly"/>
+                                                <constraint firstAttribute="bottom" secondItem="gma-5p-cba" secondAttribute="bottom" id="HW2-lf-hjV"/>
+                                                <constraint firstItem="gma-5p-cba" firstAttribute="leading" secondItem="V2q-bf-zDW" secondAttribute="leading" constant="16" id="chg-mF-krR"/>
+                                                <constraint firstAttribute="trailing" secondItem="gma-5p-cba" secondAttribute="trailing" constant="16" id="xfS-P7-Vbr"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="roleSwitchStackView" destination="gma-5p-cba" id="kRS-8w-bON"/>
                                             <outlet property="stateSwitch" destination="nSd-0O-0nE" id="Pds-0O-bwi"/>
                                             <outlet property="titleLabel" destination="Iu4-8i-4zf" id="avF-7h-HkC"/>
                                         </connections>
@@ -488,7 +491,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="9t3-M4-dAz" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
-                                                <rect key="frame" x="16" y="211.5" width="343" height="0.0"/>
+                                                <rect key="frame" x="359" y="211.5" width="0.0" height="0.0"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
